--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -33,6 +33,8 @@
         <a href="#" rel="permalink">{{ title }}</a>
       {% endif %}
     </h3>
+
+    <p>{{ post.venue }}</p>
     
 
     {% if post.citation and post.paperurl %}
