--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -35,15 +35,7 @@
     </h3>
 
     <p>{{ post.venue | replace: "Xie Q", "<b>Xie Q</b>" }}</p>
+    <p>{{ post.citation }}
     
-
-    {% if post.citation and post.paperurl %}
-      <p>Recommended citation: {{ post.citation }} <a href="{{ post.paperurl }}"><u>{{ post.paperurl }}</u></a></p>
-    {% elsif post.citation %}
-      <p>Recommended citation: {{ post.citation }} </p>
-    {% elsif post.paperurl %}
-      <p>Download <a href=" {{ post.paperurl }} "><u>here</u></a></p>
-    {% endif %}
-
   </article>
 </div>
