--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -35,7 +35,7 @@
     </h3>
 
     <p>{{ post.venue | replace: "Xie Q", "<b>Xie Q</b>" }}</p>
-    <p>{{ post.citation }}
+    <p>{{ post.citation }} </p>
     
   </article>
 </div>
