--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -28,7 +28,10 @@
 
     <h3 class="archive__item-title" itemprop="headline">
       {% if post.link %}
-        <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
+        <a href="{{ post.link }}">{{ title }}</a> 
+        {% if post.slide %}
+        <a href="{{ post.slide }}">[slide]</a> 
+        {% endif %}
       {% else %}
         <a href="#" rel="permalink">{{ title }}</a>
       {% endif %}
