修复文本对齐格式

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -20,6 +20,12 @@
   }
 }
 
+.archive__item {
+  p {
+    text-align: justify;
+  }
+}
+
 .archive__subtitle {
   margin: 1.414em 0 0;
   padding-bottom: 0.5em;
