--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -46,7 +46,7 @@
 
   span {
     font-weight: normal !important;
-    padding-left: 0.25em;
+    padding-left: 0.25em !important;
   }
 
   a + a {
