--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -27,13 +27,13 @@
     {% endif %}
 
     <h3 class="archive__item-title" itemprop="headline">
-        {{ title }} <span>{{ post.venue  }}</span><span>{{ post.citation }}</span>
+        {{ title }} <span>{{ post.venue  }}</span><span><i>{{ post.citation }}</i></span>
     </h3>
       {% if post.link %}
         <a href="{{ post.link }}">[paper]</a> 
       {% endif %}
         {% if post.slide %}
-        <a href="{{ post.slide }}"><i>[slide]</i></a> 
+        <a href="{{ post.slide }}">[slide]</a> 
         {% endif %}
 
     {% for abc in post.abstract %}
